Fix: cell-plain text alignment on mobile table-stack

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1174,6 +1174,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
             text-transform: uppercase; color: var(--bs-secondary-color);
             padding-top: .1rem;
         }
+        td.cell-plain { text-align: left; display: block; }
         td.cell-plain::before { content: none; }
         td.cell-actions {
             border-top: 1px solid var(--bs-border-color);
